<resources>
    <string name="app_name">My Application</string>
    <string name="user_name">이름</string>
    <string name="user_age">나이</string>
    <string name="user_habit">취미</string>
    <string name="user_sex">성별</string>
    <string name="user_man">남자</string>
    <string name="user_woman">여자</string>
    <string name="join">가입</string>
    <string name="back">뒤로가기</string>

    <string name="title_imageview">이미지뷰</string>
</resources>
